--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="delete_history_complete">Delete History complete</string>
     <string name="delete_search_complete">Delete Search Complete</string>
     <string name="empty_recently_seen">Aún no viste publicaciones.\n ¡Empezá a descubrir todo lo que \n tenemos para vos!</string>
+    <string name="empty_search">Aún no buscaste nada</string>
+    <string name="simple_error_message">Ups algo salio mal, vuelve a intentarlo</string>
+    <string name="retry">Reintentar</string>
+    <string name="it_seems_there_is_no_internet">¡Parece que no hay internet!</string>
 </resources>
